2006-01-22 Magnus Hagdorn
 * CF_proj.py: fix bug #170 - no CF-compilance of projection mapping

2006-01-02 Magnus Hagdorn
 * extractProfileTS.py: new prog for extracting profile time series 
   from CF file.
 * setup.py: hook up

2005-12-31 Magnus Hagdorn
 * CF_area.py: add option to change resolution of coastline DB
               new method for plotting ice extent
 * CF_loadfile.py: add new virtual variable isobase
 * plotCFvar.py: add option to plot no image, add option to change
   resolution of coastline DB
 * plot_extent.py: add option to plot multiple times

2005-12-19 Magnus Hagdorn
 * CF_rsl.py: fix minor bug
 * setup.py: bump version to 0.5
 * NEWS: update

2005-12-16 Magnus Hagdorn
 * CF_loadfile.py: optionally specify time interval when calculating
   RSL residuals
 * CF_options.py: use CFreadlines for reading profiles
 * CF_rsl.py: time interval is assumed to be scaled
 * make_anim.py: add option to pass options to convert
 * plotRSL.py: optionally specify time interval to be processed
 * plotRSLhist.py: ditto
 * plotRSLres.py: ditto

2005-12-09 Magnus Hagdorn
 * CF_area.py: add option to annotate contours
 * CF_loadfile.py: make error somewhat more verbose
 * CF_rsl.py: add selection for Britain
 * construct_field.py: minor optimisation
 * plotCFvar.py: can plot custom contours (which can also be annotated)
 * plotRSL.py: autolayout plot

2005-11-30 Magnus Hagdorn
 * CF_IOmisc.py: new class for reading contours
 * construct_field.py: can read polygons from file

2005-11-28 Magnus Hagdorn
 * CF_diff.py: fix bug where colourmap file got deleted to early
 * CF_rsl.py: add class for plotting colour histogram of RSL residuals
 * plotRSLres.py: use new class for colour histograms

2005-11-28 Magnus Hagdorn
 * CF_loadfile.py: add bvel_tavg to calculated variables
 * CF_colourmap.py: add colourmap for bvel_tavg
 * CF_area.py: add velo components for bvel_tavg
 * plotCFvar.py: add glyphs for bvel_tavg
 * plotStreams.py: use bvel_tavg if available
