@@ -1,3 +1,7 @@
+2007-05-03 Felix Hebeler / Stewart Jamieson
+ * a2c.py: updated version - better projection handling, added functionality 
+ 	   for creating and altering variables on the fly (supports multiple variables per file)
+
 2006-01-22 Magnus Hagdorn
  * CF_proj.py: fix bug #170 - no CF-compilance of projection mapping
 
